--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "test-react-app",
+  "name": "react-calculator",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "test-react-library": "/Users/miguelcadiz/Documents/Projects/test-react-library/test-react-library-0.1.5.tgz",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
@@ -34,5 +36,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^8.7.0",
+    "eslint-plugin-react": "^7.28.0"
   }
 }
