--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "react-calculator",
+    "homepage": "https://macadiz.github.io/react-calculator",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
